# Wolf3D

./: CMakeLists.txt  Makefile  README.md  test.wlf
include/: wolf3d.h
src/: draw.c  draw2.c  init.c  key_events.c  main.c  read.c  read2.c  texture.c
textures/: demian.xpm
